--- a/writeup/cryptography.tex
+++ b/writeup/cryptography.tex
@@ -780,6 +780,7 @@ not need all the details here; they can be found in, for instance,~\cite[Section
 % \subsection{Commitment}
 
 \subsection{Zero-Knowledge Proof}
+\label{sec:zkp}
 
 In an \emph{interactive proof}, one party---the \emph{prover}---tries to
 convince the other---the \emph{verifier}---that some statement is true. We
