--- a/writeup/category-theory.tex
+++ b/writeup/category-theory.tex
@@ -1428,14 +1428,14 @@ of $\cat{D}$, so that we may depict the morphism $Ff: Fx\to Fy$ as \[
   \begin{pic}
     \node[morphism] (f) at (0,0) {$f$};
     \draw (f.south) to ++(0,-.9) node[left] {$Fx$} node[right, xshift=6mm, yshift=5mm] {\normalsize.};
-    \draw[functor=blue] (-.5,-.8) rectangle (.5, .8);
+    \draw[functor=cyan] (-.5,-.8) rectangle (.5, .8);
     \draw (f.north) to ++(0,.9) node[left] {$Fy$};
   \end{pic}
 \]
 
 If $F$ is monoidal, we write the morphism $\phi_{x,y}$ as \[
   \begin{pic}
-    \draw[functor=blue] (-.5, -.3) -- (0, -.3) -- (0, .2) -- (.5, .2) -- (.5,
+    \draw[functor=cyan] (-.5, -.3) -- (0, -.3) -- (0, .2) -- (.5, .2) -- (.5,
       -.3) -- (1, -.3) -- (1, .7) -- (-.5, .7) -- cycle;
     \draw[rounded corners] (-.25, -.75) node[left] {$Fx$} -- (-.25, .45) --
       (.75, .45) -- ++(0, -1.2) node[right] {$Fy$} node[right, xshift=4mm, yshift=5mm] {\normalsize,};
@@ -1448,14 +1448,14 @@ morphism, instead doing manipulation inside $\cat{C}$, which happens in the blue
 shading. For instance, coherence with the identity states that
 \begin{equation}\label{eqn:monoidal functor id}
   \begin{pic}
-    \draw[functor=blue] (-.6, -.3) -- (0, -.3) -- (0, .2) -- (.3, .2) -- (.3,
+    \draw[functor=cyan] (-.6, -.3) -- (0, -.3) -- (0, .2) -- (.3, .2) -- (.3,
       -.3) -- (.9, -.3) -- (.9, 1) -- (-.6, 1) -- cycle;
       \draw (-.3, 1.5) node[left] {$Fx$} -- ++(0, -2.5) node[left] {$Fx$};
     \draw (.6, .45) node[state,scale=.5,rotate=180] {} -- ++(0, -1.) node[state,scale=.5] {};
     \end{pic}\hspace{.5em} = \hspace{.5em}\begin{pic}
       \draw(0,0) to (0,1.5);
       \end{pic}\hspace{.5em} = \hspace{.5em} \begin{pic}
-    \draw[functor=blue] (-.6, -.3) -- (0, -.3) -- (0, .2) -- (.3, .2) -- (.3,
+    \draw[functor=cyan] (-.6, -.3) -- (0, -.3) -- (0, .2) -- (.3, .2) -- (.3,
       -.3) -- (.9, -.3) -- (.9, 1) -- (-.6, 1) -- cycle;
       \draw (.6, 1.5) node[right] {$Fx$} -- ++(0, -2.5) node[right] {$Fx$} node[right, xshift=5mm,yshift=7mm]
       {\normalsize.};
@@ -1464,7 +1464,7 @@ shading. For instance, coherence with the identity states that
 \end{equation} Similarly, compatibility with the associator asserts that
 \begin{equation}\label{eqn:monoidal functor assoc}
   \begin{pic}
-    \draw[functor=blue] (-1.25,-.5) -- (-.75,-.5) -- (-.75, 0) -- (-.25, 0) --
+    \draw[functor=cyan] (-1.25,-.5) -- (-.75,-.5) -- (-.75, 0) -- (-.25, 0) --
     (-.25, -.5) -- (.25, -.5) -- (.25, .5) -- (.75, .5) -- (.75, -.5) -- (1.25,
     -.5) -- (1.25, 1) -- (-1.25, 1) -- cycle;
     \draw[rounded corners] (-1, -.9) node[left] {$Fx$} -- (-1, .25) --
@@ -1475,7 +1475,7 @@ shading. For instance, coherence with the identity states that
     % \draw (.25, .45) -- ++(0, 1.2) node[left] {$F(x\otimes_\cat{C} y)$};
   \end{pic} = 
   \begin{pic}
-    \draw[functor=blue] (1.25,-.5) -- (.75,-.5) -- (.75, 0) -- (.25, 0) --
+    \draw[functor=cyan] (1.25,-.5) -- (.75,-.5) -- (.75, 0) -- (.25, 0) --
     (.25, -.5) -- (-.25, -.5) -- (-.25, .5) -- (-.75, .5) -- (-.75, -.5) -- (-1.25,
     -.5) -- (-1.25, 1) -- (1.25, 1) -- cycle;
     \draw[rounded corners] (1, -.9) node[right] {$Fz$} node[right, xshift=5mm,
@@ -1492,7 +1492,7 @@ compatibility with the symmetry: \begin{equation}\label{eqn:monoidal functor sym
   \begin{pic}
     \draw (.8,0) node[right] {$Fy$} to[out=100,in=-90] (0,1);
     \draw (0,0) node[left] {$Fx$} to[out=80,in=-90] (.8,1);
-    \draw[functor=blue] (-.2, 1) -- (-.2, 2.05) -- (1, 2.05) -- (1, 1) --
+    \draw[functor=cyan] (-.2, 1) -- (-.2, 2.05) -- (1, 2.05) -- (1, 1) --
     (.6, 1) -- (.6, 1.45) -- (.2, 1.45) -- (.2, 1) -- cycle;
     \draw[rounded corners] (.8,1)  -- (.8,1.7) --
       (0, 1.7) -- (0, 1);
@@ -1501,7 +1501,7 @@ compatibility with the symmetry: \begin{equation}\label{eqn:monoidal functor sym
   \begin{pic}
     \draw (.8,0) node[right] {$Fy$} node[right,xshift=5mm,yshift=7mm] {\normalsize.} to (.8, .4) to[out=90,in=-90] (0,1.4);
     \draw (0,0) node[left] {$Fx$} to (0, .4) to[out=90,in=-90] (.8,1.4);
-    \draw[functor=blue] (-.2, .2) -- (-.2, 2.05) -- (1, 2.05) -- (1, .2) --
+    \draw[functor=cyan] (-.2, .2) -- (-.2, 2.05) -- (1, 2.05) -- (1, .2) --
     (.6, .2) -- (.6, .65) -- (.2, .65) -- (.2, .2) -- cycle;
     \draw[rounded corners] (.8,1.4)  -- (.8,1.7) --
       (0, 1.7) -- (0, 1.4);
