--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -1103,7 +1103,7 @@
 @phdthesis{bauer-2000,
 	place = {Pittsburgh, PA},
 	journal = {The realizability approach to computable analysis and topology},
-	school = {School of Computer Science},
+	school = {Carnegie Mellon University},
 	author = {Bauer, Andrej},
 	year = {2000},
 } 
@@ -1840,4 +1840,174 @@
 	eprint = {2003.06214},
 	archivePrefix = {arXiv},
 	primaryClass = {cs.LO},
+}
+
+@article{girard-1992,
+	title = {Bounded linear logic: a modular approach to polynomial-time
+	         computability},
+	journal = {Theoretical Computer Science},
+	volume = {97},
+	number = {1},
+	pages = {1-66},
+	year = {1992},
+	issn = {0304-3975},
+	doi = {https://doi.org/10.1016/0304-3975(92)90386-T},
+	url = {https://www.sciencedirect.com/science/article/pii/030439759290386T},
+	author = {Jean-Yves Girard and Andre Scedrov and Philip J. Scott},
+	abstract = {Usual typed lambda-calculi yield input/output specifications; in
+	            this paper the authors show how to extend this paradigm to
+	            complexity specifications. This is achieved by means of a
+	            restricted version of linear logic in which the use of exponential
+	            connectives is bounded in advance. This bounded linear logic
+	            naturally involves polynomials in its syntax and dynamics. It is
+	            then proved that any functional term of appropriate type actually
+	            encodes a polynomial-time algorithm and that conversely any
+	            polynomial-time function can be obtained in this way.},
+}
+
+@book{troelstra-1992,
+	author = {Anne Sjerp Troelstra},
+	editor = {},
+	publisher = {Center for the Study of Language and Information Publications},
+	title = {Lectures on Linear Logic},
+	year = {1992},
+}
+
+@incollection{dunn-1983,
+	author = {Michael Dunn and Greg Restall},
+	booktitle = {Handbook of Philosophical Logic},
+	editor = {Dov M. Gabbay and Franz Guenthner},
+	publisher = {Kluwer Academic Publishers},
+	title = {Relevance Logic},
+	year = {1983},
+}
+
+@article{lambek-1958,
+	author = {Joachim Lambek},
+	title = {The Mathematics of Sentence Structure},
+	journal = {The American Mathematical Monthly},
+	volume = {65},
+	number = {3},
+	pages = {154--170},
+	year = {1958},
+	publisher = {Taylor \& Francis},
+	doi = {10.1080/00029890.1958.11989160},
+	URL = { https://doi.org/10.1080/00029890.1958.11989160 },
+	eprint = { https://doi.org/10.1080/00029890.1958.11989160 },
+}
+
+@unpublished{pruiksma-2018,
+	author = {Klaas Pruiksma and William Chargin and Frank Pfenning and Jason Reed
+	          },
+	year = {2018},
+	title = {Adjoint Logic},
+	url = {https://www.cs.cmu.edu/~fp/papers/adjoint18b.pdf},
+}
+
+@inproceedings{maf-2005,
+	author = "Morrisett, Greg and Ahmed, Amal and Fluet, Matthew",
+	editor = "Urzyczyn, Pawe{\l}",
+	title = "L3: A Linear Language with Locations",
+	booktitle = "Typed Lambda Calculi and Applications",
+	year = "2005",
+	publisher = "Springer Berlin Heidelberg",
+	address = "Berlin, Heidelberg",
+	pages = "293--307",
+	abstract = "We explore foundational typing support for strong updates ---
+	            updating a memory cell to hold values of unrelated types at
+	            different points in time. We present a simple, but expressive type
+	            system based upon standard linear logic, one that also enjoys a
+	            simple semantic interpretation for types that is closely related to
+	            models for spatial logics. The typing interpretation is strong
+	            enough that, in spite of the fact that our core calculus supports
+	            shared, mutable references and cyclic graphs, every well-typed
+	            program terminates.",
+	isbn = "978-3-540-32014-2",
+}
+
+@article{lmz-2019,
+	author = {Bert Lindenhovius and Michael W. Mislove and Vladimir Zamdzhiev},
+	title = {Mixed Linear and Non-linear Recursive Types},
+	journal = {CoRR},
+	volume = {abs/1906.09503},
+	year = {2019},
+	url = {http://arxiv.org/abs/1906.09503},
+	eprinttype = {arXiv},
+	eprint = {1906.09503},
+	timestamp = {Thu, 14 Oct 2021 09:17:12 +0200},
+	biburl = {https://dblp.org/rec/journals/corr/abs-1906-09503.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+}
+
+@phdthesis{paykin-2018,
+	title = {Linear/non-linear types for embedded domain-specific languages},
+	author = {Paykin, Jennifer},
+	year = {2018},
+	school = {University of Pennsylvania},
+}
+
+@article{krishnaswami-2015,
+	author = {Krishnaswami, Neelakantan R. and Pradic, Pierre and Benton, Nick},
+	title = {Integrating Linear and Dependent Types},
+	year = {2015},
+	issue_date = {January 2015},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {50},
+	number = {1},
+	issn = {0362-1340},
+	url = {https://doi.org/10.1145/2775051.2676969},
+	doi = {10.1145/2775051.2676969},
+	abstract = {In this paper, we show how to integrate linear types with type
+	            dependency, by extending the linear/non-linear calculus of Benton
+	            to support type dependency. Next, we give an application of this
+	            calculus by giving a proof-theoretic account of imperative
+	            programming, which requires extending the calculus with
+	            computationally irrelevant quantification, proof irrelevance, and a
+	            monad of computations. We show the soundness of our theory by
+	            giving a realizability model in the style of Nuprl, which permits
+	            us to validate not only the beta-laws for each type, but also the
+	            eta-laws. These extensions permit us to decompose Hoare triples
+	            into a collection of simpler type-theoretic connectives, yielding a
+	            rich equational theory for dependently-typed higher-order
+	            imperative programs. Furthermore, both the type theory and its
+	            model are relatively simple, even when all of the extensions are
+	            considered.},
+	journal = {SIGPLAN Not.},
+	month = {jan},
+	pages = {17–30},
+	numpages = {14},
+	keywords = {dependent types, hoare triples, intersection types, linear types,
+	            proof irrelevance, separation logic},
+}
+
+@misc{tol-2021,
+	title = {Introduction to Colour Schemes},
+	url = {https://personal.sron.nl/~pault/},
+	journal = {Paul Tol’s Notes},
+	author = {Tol, Paul},
+	year = {2021},
+	month = {Aug},
+} 
+
+@article{seely-1987,
+	ISSN = {00224812},
+	URL = {http://www.jstor.org/stable/2273831},
+	abstract = {A categorical structure suitable for interpreting polymorphic
+	            lambda calculus (PLC) is defined, providing an algebraic semantics
+	            for PLC which is sound and complete. In fact, there is an
+	            equivalence between the theories and the categories. Also presented
+	            is a definitional extension of PLC including "subtypes", for
+	            example, equality subtypes, together with a construction providing
+	            models of the extended language, and a context for Girard's
+	            extension of the Dialectica interpretation.},
+	author = {R. A. G. Seely},
+	journal = {The Journal of Symbolic Logic},
+	number = {4},
+	pages = {969--989},
+	publisher = {[Association for Symbolic Logic, Cambridge University Press]},
+	title = {Categorical Semantics for Higher Order Polymorphic Lambda Calculus},
+	urldate = {2024-04-17},
+	volume = {52},
+	year = {1987},
 }
